src/styles/app.scss
@layer theme, normalize, reset, defaults, layout, components, utilities;

@import './triptych.scss' layer(theme);
@import 'normalize.css' layer(normalize);
@import './reset.scss' layer(reset);
@import './defaults.scss' layer(defaults);
@import './components.scss' layer(components);
@import './utilities.scss' layer(utilities);

.app {
	--padding: 1rem;
	--sidebar-width: 14rem;
}

.app-header {
	z-index: 1;
	font-size: var(--font-size-small);
	line-height: 1.75em;
	column-width: 25ch;
	column-gap: 2em;
	padding: var(--padding);
}

.app-nav {
	display: flex;
	flex-direction: column;
}

.nav-link {
	&::before {
		content: attr(data-icon);
		display: inline-block;
	}
	&::before,
	&:hover::before {
		text-decoration: none;
		margin-right: 1ch;
	}
}

.app:has(.app-main:not(:empty)) {
	.app-header {
		column-width: unset;
		position: fixed;
	}
	@media (width >= 600px) {
		padding-inline-start: var(--sidebar-width);

		.app-header {
			width: var(--sidebar-width);
			top: 0;
			left: 0;
			bottom: 0;
			display: flex;
			flex-direction: column;
			gap: 0.75lh;
			border-inline-end: 1px solid var(--divider);

			& > * {
				margin-block: 0;
			}

			.index {
				flex: 1;
				overflow: auto;
				overscroll-behavior: contain;
				padding-inline-end: var(--padding);
				margin-inline-end: calc(-1 * var(--padding));
			}
		}
	}
	@media (width < 600px) {
		.app-header {
			--chroma: 100%;
			--max-width: calc(100% - 2 * var(--padding));
			bottom: var(--padding);
			left: 50%;
			width: var(--max-width);
			max-width: var(--max-width);
			transform: translateX(-50%);
			overflow: hidden;
			background-color: var(--float);
			display: flex;
			border-radius: var(--border-radius-small);
			border: 1px solid var(--border);
			padding: 0.5rem 1rem;

			& > *:not(:is(nav)) {
				display: none;
			}
		}
		.app-nav {
			width: 100%;
			display: flex;
			flex-direction: row;
			justify-content: space-evenly;
			gap: 1em;
		}
		.nav-link {
			text-align: center;
		}
	}
}

.app-main {
	padding: var(--padding);

	&:empty {
		display: none;
	}

	@media (width < 600px) {
		padding-bottom: 6rem;
	}
}

